--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -37,6 +37,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<h1 align = center> <strong>Stroke Prediction</strong> </h1>\n",
+        "<h3 align = center> Team members : Shrutayu Aggarwal (B20CS096), Priyanshu Jain (B20CS044), Pratul Singh (B20CS095)"
+      ],
+      "metadata": {
+        "id": "FsGQD9Esjyhq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##**Useful Library Import**"
       ],
       "metadata": {
